fix: wrapping of post link

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -112,6 +112,7 @@
 
     .linklog {
         color: $color-contrast;
+        margin-left: 5px;
         &:hover {
           color: $color-link;
         }
@@ -162,7 +163,7 @@
             a.post-link-url {
                 float: left;
                 display: block;
-                width: 75%;
+                max-width: 75%;
 
                 @include media-query($on-mobile) {
                     font-size: 16px;
